# secret-santa

./: .gitignore  Cargo.toml  README.md
src/: components.rs  errors.rs  main.rs
src/components/: secret_santa.rs
