[package]
name = "secret-santa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.3.2"
dioxus-free-icons = { version = "0.6.0", features = ["font-awesome-solid"] }
dioxus-web = "0.3.1"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
thiserror = "1.0.40"
